fix bug met homepage, css overlap

--- a/src/pages/Favourites.css
+++ b/src/pages/Favourites.css
@@ -9,7 +9,7 @@
     min-height: 50vh;
 }
 
-.section2 {
+.sectionfavheader {
     background-image: url('../assets/CocktailFavback.jpg');
     background-size: cover;
     background-position: center;
